# flask-docker

./: .dockerignore  .env  Dockerfile  app.py  compose.yaml  db.py  docker-compose.yaml  iot.py  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
doc/: mosquitto.conf  mq.txt  mt.txt  py-install.txt  shelly-api.txt
doc/proxy/data/: database.sqlite  keys.json
doc/proxy/data/nginx/proxy_host/: 1.conf
doc/proxy/letsencrypt/renewal/: npm-1.conf
instance/: data.db
src/task_app/: __init__.py  tasks.py  views.py
src/task_app/templates/: getshellystatuses.html  index.html  test.html
tasks/: tasks.py
