[project]
name = "flask-docker-1"
version = "1.0.0"
description = "Security manager"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["flask>=3.0.0", "celery[redis]>=5.2.7"]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "task_app"

[tool.ruff]
src = ["src"]